--- a/templates/test.html
+++ b/templates/test.html
@@ -5,5 +5,10 @@
     </head>
     <body>
         <p>\( x^2 + 1 = 2\)</p>
+        <p>
+\begin{align}
+    x &= 2 \\
+    y &= \int_x^3 z \mathrm{d}z
+\end{align}
     </body>
 </html>
