--- a/static/style.css
+++ b/static/style.css
@@ -128,3 +128,7 @@ nav > a:not(:last-child)::after {
 .component .help-text {
     padding-left: 2em;
 }
+textarea {
+    width: 100%;
+    height: 15em;
+}
